Header: Fix spacing between columns to have address as one line

--- a/stylesheets/main.sass
+++ b/stylesheets/main.sass
@@ -104,9 +104,8 @@ p
   flex-wrap: wrap
   margin-right: 0
   table.column
-    margin-right: auto
     &:first-child
-      width: 240px
+      width: 330px
     & th
       width: 58px
 
